--- a/form.css
+++ b/form.css
@@ -290,14 +290,17 @@ input[type = "text"]::placeholder{
 
 @media screen and (max-width : 1100px){
     .form-container{
-        padding : 25px;
+        padding : 20px;
+    }
+    .form-container-7{
+        padding : 5px;
     }
     .input-section,.input-section-2,.input-section-3,.input-section-4,.input-section-5,.input-section-6, #comment-section{
         padding : 20px 5px;
     }
     .name, .dept-name, .year, .position-role, .s4-name, .comments{
         text-align: center;
-    }
+    }   
     .thankyou-container{
         padding : 0px 20px;
     }
