--- a/emoji.css
+++ b/emoji.css
@@ -1,89 +1,99 @@
-:root {
-	--yellow: #ffd100;
-	--orange: #ff6a13;
-	--darkGray: #53565a;
-	--midGray: #888b8d;
-	--white: #fff;
-	--roundness: 1.25em;
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+html,body{
+  display: grid;
+  height: 100%;
+  text-align: center;
+  place-items: center;
+  background: #664AFF;
+}
+.range{
+  height: 80px;
+  background: #fff;
+  border-radius: 10px;
+  padding: 0 65px 0 45px;
+  box-shadow: 2px 4px 8px rgba(0,0,0,0.1);
+  transition: all 0.3s ease-in-out;
 }
 
-*, *:after, *:before {
-	box-sizing: border-box;
-	color: var(--darkGray);
+.sliderValue{
+  position: relative;
+  width: 100%;  
+}
+.sliderValue span{
+  position: absolute;
+  transform: translateX(-70%) scale(0);
+  font-weight: 500;
+  top: -40px;
+  line-height: 55px;
+  z-index: 2;
+  /* color: #fff; */
+  transform-origin: bottom;
+  transition: transform 0.3s ease-in-out;
+}
+.sliderValue span.show{
+  transform: translateX(-70%) scale(1);
 }
 
-.slider {
-	padding: 2rem 2rem 4remq; /* Extra padding on bottom helps center-align slider */
-	display: grid; /*TBH grid is probably a little overkill here but ¯\_(ツ)_/¯ */
-	justify-content: stretch;
-	width: 100%;
-	max-width: 37.5em;
-	margin: auto;
-	
-	input {
-		grid-row: 2 / 3;
-		grid-column: 1 / 2;
-		width: 100%;
-		position: relative;
-		z-index: 1;
-		opacity: 0;
-		height: calc(var(--roundness) * 2);
-		cursor: pointer;
-		
-		&:focus + .outer {
-			box-shadow: 0 0 0 0.1em var(--white), 0 0 0 0.2em var(--orange);			
+.field{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  position: relative;
+}
+.field .value{
+  position: absolute;
+  font-size: 18px;
+  color: black;
+  font-weight: 600;
+}
+.field .value.left{
+  left: -22px;
+}
+.field .value.right{
+  right: -43px;
+}
+.range input{
+  -webkit-appearance: none;
+  width: 100%;
+  height: 3px;
+  background: #79AEA3;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  z-index: 2222;
+}
+.range input::-webkit-slider-thumb{
+  -webkit-appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #79AEA3;
+  border: 1px solid #79AEA3;
+  cursor: pointer;
+}
+.range input::-moz-range-thumb{
+  -webkit-appearance : none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #79AEA3;
+  border: 1px solid #79AEA3;
+  cursor: pointer;
+}
+.range input::-moz-range-progress{
+  background: #664AFF;
+}
 
-			& .emoji {	
-				/* Alternate focus style on the emoji button */
-				box-shadow: 0 0 0 0.05em var(--orange);
-				background: var(--white);
-			}
-		}
-	}
-
-	& > label {
-		width: 100%;
-		margin: auto;
-		font-size: 1.5em;
-		padding: 0 0 0.5em;
-	}
-
-	.outer {
-		grid-row: 2 / 3;
-		grid-column: 1 / 2;
-		width: 100%;
-		border-radius: var(--roundness);
-		margin: auto;
-		height: calc(var(--roundness) - 0em);
-		background: var(--midGray);
-		display: flex;
-		align-content: center;
-		align-items: center;
-		position: relative;
-		z-index: 0;
-	}
-
-	label.inner {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		background: var(--white);
-		border-top-left-radius: var(--roundness)!important;
-		border-bottom-left-radius: var(--roundness)!important;
-		position: absolute;
-		transition: all .15s cubic-bezier(0.5, 0.4, .2, 1);
-		transform-origin: left;
-	}
-		
-	.emoji {
-		margin-left: -.2em;
-		display: inline-block;
-		width: 1em;
-		height: 1em;
-		transition: all .15s cubic-bezier(0.5, 0.4, .2, 1);
-		border-radius: var(--roundness);		
-		text-align: right;
-		font-size: calc(var(--roundness) * 2);
-		line-height: 1.1;
-	}
+.range:hover{
+  background: #A6C9C2;
+}
+.range:hover input{
+  background: #D9E8E5;
 }
