--- a/emoji.css
+++ b/emoji.css
@@ -5,7 +5,13 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-
+html,body{
+  display: grid;
+  height: 100%;
+  text-align: center;
+  place-items: center;
+  background: #664AFF;
+}
 .range{
   height: 80px;
   background: #fff;
@@ -31,7 +37,7 @@
   transition: transform 0.3s ease-in-out;
 }
 .sliderValue span.show{
-  transform: translateX(-70%) scale(1);
+  transform: translateX(-46%) scale(1);
 }
 
 .field{
