--- a/form.css
+++ b/form.css
@@ -10,18 +10,28 @@
 }
 
 #body-container{
-    background-color: #D9E8E5;
+    /* background-color: #CFD9DE; */
+    background-image:
+    linear-gradient(45deg,
+        rgba(245, 70, 66, 0.75),
+        rgba(8, 83, 156, 0.75)), 
+          url('./media/sample.jpg');
+    background-position: center;
+    background-size:contain;
+    background-repeat: no-repeat;
 }
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     width : 100vw;
+    margin: 30px 0px;
 }
 .form-container{    
     text-align:center;
     padding : 20px 60px;
-    background-color: #79AEA3;
+    /* background-color: #B6C6CD; */
+    background-color: white;
     -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
@@ -44,7 +54,7 @@ section{
 
 input[type = "text"], #select-dropdown{
     border : 1px solid black;
-    background-color : #D9E8E5;
+    background-color : white;
     font-weight: 500;
 }
 input[type = "text"]::placeholder{
@@ -58,30 +68,32 @@ input[type = "text"]::placeholder{
     border-radius: 15px;
     justify-content: space-between;
     padding : 20px 30px;
-    background-color : #A6C9C2;
+    /* background-color : #E7ECEE; */
+    background-color: rgba(105, 108, 255, 0.16);
     backdrop-filter: blur(5px);
     transition: all 0.3s ease-in-out;
 }
 .heading{
-    background-color: #D9E8E5;
+    /* background-color: #E7ECEE; */
+    background-color: rgba(105, 108, 255, 0.16);
     border-radius: 15px;
     padding : 20px 30px;
     margin-bottom: 20px;
     -webkit-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
     -moz-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
-    box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
+    box-shadow: 1px 1px 6px 0px rgba(0,0,0,0    .62);
 }
 
 .input-section:hover {
-    background-color: #D9E8E5;
-    border: 1px solid #3E655D;
+    /* background-color: #E7ECEE; */
+    /* border: 1px solid #E7ECEE; */
     backdrop-filter: blur(5px);
     -webkit-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
     -moz-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
     box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
-    input[type = "text"], #select-dropdown{
+    /* input[type = "text"], #select-dropdown{
         background-color: #F2F7F6;
-    }
+    } */
 }
 .name, .dept-name, .year, .position-role, .s4-name, .comments{
     font-family: "Noto Sans", sans-serif;
@@ -128,17 +140,20 @@ input[type = "text"]::placeholder{
     border-radius: 15px;
     justify-content: space-between;
     padding : 20px 30px;
-    background-color : #A6C9C2;
+    /* background-color : #A6C9C2; */
+    background-color: rgba(105, 108, 255, 0.16);
     backdrop-filter: blur(5px);
     transition: all 0.3s ease-in-out;
+    
+}
+.input-section-2:hover {
+    /* background-color: #D9E8E5; */
+    /* border: 1px solid #3E655D; */
+    
+    backdrop-filter: blur(5px);
     -webkit-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
     -moz-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
     box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
-}
-.input-section-2:hover {
-    background-color: #D9E8E5;
-    border: 1px solid #3E655D;
-    backdrop-filter: blur(5px);
 }
 
 
@@ -150,13 +165,14 @@ input[type = "text"]::placeholder{
     border-radius: 15px;
     justify-content: space-between;
     padding : 20px 30px;
-    background-color : #A6C9C2;
+    /* background-color : #A6C9C2; */
+    background-color: rgba(105, 108, 255, 0.16);
     backdrop-filter: blur(5px);
     transition: all 0.3s ease-in-out;
 }
 .input-section-3:hover {
-    background-color: #D9E8E5;
-    border: 1px solid #3E655D;
+    /* background-color: #D9E8E5; */
+    /* border: 1px solid #3E655D; */
     backdrop-filter: blur(5px);
     -webkit-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
     -moz-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
@@ -190,13 +206,14 @@ input[type = "text"]::placeholder{
     border-radius: 15px;
     justify-content: space-evenly;
     padding : 20px 30px;
-    background-color : #A6C9C2;
+    /* background-color : #A6C9C2; */
+    background-color: rgba(105, 108, 255, 0.16);    
     backdrop-filter: blur(5px);
     transition: all 0.3s ease-in-out;
 }
 .input-section-4:hover , .input-section-5:hover{
-    background-color: #D9E8E5;
-    border: 1px solid #3E655D;
+    /* background-color: #D9E8E5; */
+    /* border: 1px solid #3E655D; */
     backdrop-filter: blur(5px);
     -webkit-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
     -moz-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
@@ -214,24 +231,24 @@ input[type = "text"]::placeholder{
     justify-content: space-between;
     border-radius: 15px;
     padding : 20px 30px;
-    background-color : #A6C9C2;
+    /* background-color : #A6C9C2; */
+    background-color: rgba(105, 108, 255, 0.16);
     backdrop-filter: blur(5px);
     transition: all 0.3s ease-in-out;
 }
 #form-6-textarea > textarea{
-    background-color: #D9E8E5;
     font-weight: 500;
     }
 .input-section-6:hover{
-    background-color: #D9E8E5;
-    border: 1px solid #3E655D;
+    /* background-color: #D9E8E5; */
+    /* border: 1px solid #3E655D; */
     backdrop-filter: blur(5px);
     -webkit-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
     -moz-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
     box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
-    #form-6-textarea > textarea{
+    /* #form-6-textarea > textarea{
         background-color : #A6C9C2;
-    }
+    } */
 }
 
 /* form7.html */
@@ -242,24 +259,25 @@ input[type = "text"]::placeholder{
     margin: 50px 0px;
     border-radius: 15px;
     padding : 20px 30px;
-    background-color : #A6C9C2;
+    /* background-color : #A6C9C2; */
+    background-color: rgba(105, 108, 255, 0.16);
     backdrop-filter: blur(5px);
     transition: all 0.3s ease-in-out;
 }
 #form-7-textarea > textarea{
-    background-color: #D9E8E5;
+    /* background-color: #D9E8E5; */
     font-weight: 500;
     }
 #comment-section:hover{
-    background-color: #D9E8E5;
-    border: 1px solid #3E655D;
+    /* background-color: #D9E8E5; */
+    /* border: 1px solid #3E655D; */
     backdrop-filter: blur(5px);
     -webkit-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
     -moz-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
     box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
-    #form-7-textarea > textarea{
+    /* #form-7-textarea > textarea{
         background-color : #A6C9C2;
-    }
+    } */
 }
 #submit {
     background-color: blue;
@@ -273,11 +291,20 @@ input[type = "text"]::placeholder{
     width : 100vw;
     height : 100vh;
     padding : 0px 5px;
-    background-color: #79AEA3;
+    /* background-color: #79AEA3; */
+    background-image:
+    linear-gradient(45deg,
+        rgba(245, 70, 66, 0.75),
+        rgba(8, 83, 156, 0.75)), 
+          url('./media/sample.jpg');
+    background-position: center;
+    background-size:contain;
+    background-repeat: no-repeat;
 }
 .thankyou-items{
     text-align: center;
-    background-color : #A6C9C2;
+    /* background-color : #A6C9C2; */
+    background-color: rgba(105, 108, 255, 0.16);
     padding : 20px 30px;
     border-radius: 15px;
     -webkit-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.62);
@@ -289,7 +316,6 @@ input[type = "text"]::placeholder{
     .form-container{
         padding : 20px;
     }
-
     .input-section,.input-section-2,.input-section-3,.input-section-4,.input-section-5,.input-section-6{
         padding : 20px 5px;
     }
