--- a/form.css
+++ b/form.css
@@ -14,8 +14,8 @@
     background-image:
     linear-gradient(45deg,
         rgba(245, 70, 66, 0.75),
-        rgba(8, 83, 156, 0.75)), 
-          url('./media/sample.jpg');
+        rgba(8, 83, 156, 0.75)),
+          url('./media/doodle.png');
     background-position: center;
     background-size:contain;
     background-repeat: no-repeat;
