--- a/form.css
+++ b/form.css
@@ -97,7 +97,7 @@ input[type = "text"]::placeholder{
 }
 .name, .dept-name, .year, .position-role, .s4-name, .comments{
     font-family: "Noto Sans", sans-serif;
-    text-align:left;
+    text-align:center;
     font-weight: 700;
 }
 
@@ -120,7 +120,7 @@ input[type = "text"]::placeholder{
     flex-direction: column;
     align-items: center;
 }
-#select-dropdown{
+#select-dropdown, #select-dropdown2{
     border: 1px solid black;
 }
 #proceedButton {
